test/feature/Syntax/Error_FunctionParam.js
// Should not compile.
// SyntaxError: feature/Syntax/Error_FunctionParam.js:4:14: 'identifier' expected

function f(x,) {
  return x;
}
